<resources>
    <string name="app_name">MiCarro</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_activo">Activo</string>
    <string name="label_modelo">Seleccione Modelo</string>
    <string name="label_marca">Seleccione Marca</string>
    <string name="label_anio">Seleccione año</string>
    <string name="label_tipoPago">Metodo Pago</string>
    <string-array name="tipo_metodo_pago">
        <item>Efectivo</item>
        <item>Tarjeta</item>
        <item>Credito</item>
    </string-array>
    <string-array name="modo_mantenimiento">
        <item>PREVENTIVO</item>
        <item>CORRECTIVO</item>
        <item>CONSUMO</item>
    </string-array>
    <string name="label_estacion">Seleccione Estacion</string>
    <string name="label_tipoMant">Seleccione Tipo Mantenimiento</string>
    <string name="label_modoMant">Seleccione Modo Mantenimiento</string>
    <string name="label_metodoPago">Seleccione Metodo Pago</string>
    <string name="label_cantidad">Cantidad</string>

    <string name="label_costo">Costo</string>
    <string name="label_kilometraje">KM</string>
    <string name="label_kilometrajeProximo">KM Proximo Mant</string>
    <string name="label_comentario">Notas</string>

</resources>
