<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_estacion"
        app:layout_constraintBottom_toTopOf="@+id/estacionSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/estacionSpinner"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_tipoMant"
        app:layout_constraintBottom_toTopOf="@+id/tipoMantenimientoSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="49dp" />

    <Spinner
        android:id="@+id/tipoMantenimientoSpinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_metodoPago"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="178dp" />

    <Spinner
        android:id="@+id/metodoPagoSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/kmEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_modoMant"
        app:layout_constraintBottom_toTopOf="@+id/modoMantenimientoSpinner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/estacionSpinner"
        tools:layout_editor_absoluteX="85dp" />

    <Spinner
        android:id="@+id/modoMantenimientoSpinner"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/modo_mantenimiento"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="49dp" />

    <EditText
        android:id="@+id/cantidadEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_cantidad"
        android:inputType="numberDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="282dp" />

    <EditText
        android:id="@+id/costoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_costo"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/kmProximoEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/cantidadEditText"
        tools:layout_editor_absoluteX="17dp" />

    <EditText
        android:id="@+id/kmEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_kilometraje"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/cantidadEditText"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="17dp" />

    <EditText
        android:id="@+id/kmProximoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_kilometrajeProximo"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/comentarioEditText"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="17dp" />


    <EditText
        android:id="@+id/comentarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_comentario"
        app:layout_constraintHorizontal_bias="0.5"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="442dp" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="auto"
        app:layout_constraintBottom_toBottomOf="@+id/comentarioEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/comentarioEditText"
        app:layout_constraintTop_toBottomOf="@+id/kmProximoEditText"
        app:srcCompat="@android:drawable/ic_menu_save" />
</LinearLayout>