<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/label_marca"
        app:layout_constraintBottom_toTopOf="@+id/marcaSpinner"
        app:layout_constraintStart_toStartOf="parent" />


    <Spinner
        android:id="@+id/marcaSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:text="@string/label_modelo"
        app:layout_constraintBottom_toTopOf="@+id/modeloSpinner"
        app:layout_constraintStart_toStartOf="@+id/modeloSpinner" />

    <Spinner
        android:id="@+id/modeloSpinner"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/label_anio"
        app:layout_constraintBottom_toTopOf="@+id/anioSpinner"
        app:layout_constraintStart_toStartOf="@+id/anioSpinner" />

    <Spinner
        android:id="@+id/anioSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreVehiculoEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nombreVehiculoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:hint="@string/label_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <CheckBox
        android:id="@+id/activoVehiculoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_activo"
        app:layout_constraintStart_toStartOf="@+id/nombreVehiculoEditText"
        app:layout_constraintTop_toBottomOf="@+id/nombreVehiculoEditText" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:clickable="true"
        android:focusable="auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombreVehiculoEditText"
        app:layout_constraintTop_toBottomOf="@+id/anioSpinner"
        app:srcCompat="@android:drawable/ic_menu_save" />
</android.support.constraint.ConstraintLayout>